# bolt

./: .gitignore  CLAUDE.md  Makefile  README.md  STATUS.md  bolt-prd.md  bolt-trd.md  embed.go  go.mod  go.sum  install.sh  wails.json
.github/workflows/: ci.yml  release.yml
bolt-qt/: CMakeLists.txt  pyproject.toml  resources.qrc
bolt-qt/src/: adddownloaddialog.cpp  adddownloaddialog.h  daemonclient.cpp  daemonclient.h  downloaddetaildialog.cpp  downloaddetaildialog.h  downloadlistmodel.cpp  downloadlistmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  progressdelegate.cpp  progressdelegate.h  settingsdialog.cpp  settingsdialog.h  types.h
bolt-qt/src/bolt_qt/: __main__.py  add_download_dialog.py  daemon_client.py  download_detail_dialog.py  download_model.py  main_window.py  progress_delegate.py  settings_dialog.py  types.py  websocket_client.py
cmd/bolt/: CLAUDE.md  gui.go  main.go
cmd/bolt-host/: host.go  host_test.go  logger.go  main.go  nativemsg.go  nativemsg_test.go  relay.go  relay_test.go  socketpath.go
docs/: STATUS.md  TRD.md  bolt-prd.md  bolt-trd.md
docs/plans/: 2026-03-01-testing-design.md  2026-03-01-testing-implementation.md  2026-03-03-steam-deck-phase9-design.md  2026-03-04-optimization-pass-design.md  2026-03-04-optimization-pass.md  2026-03-18-bolt-host-and-chrome-extension.md  2026-03-19-bolt-qt-gui.md  (+1 more)
extension/: background.js  content.js  manifest.json
extension/popup/: popup.css  (+2 more)
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
packaging/: bolt.desktop  bolt.service  com.fhsinchy.bolt.json
(+85 files in other folders)
